# Gscie

./: README.md
Gscie/: .autotools  .cproject  .project  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
Gscie/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
Gscie/gscie/: Gscie-1.0.gir  Gscie-1.0.typelib  Gscie_1_0_gir  Makefile  Makefile.am  Makefile.in  gscie-array.c  gscie-array.h  gscie-array.lo  gscie-common.c  gscie-common.h  gscie-common.lo  gscie.c  gscie.h  gscie.lo  libgscie-1.0.la
Gscie/gscie/.deps/: gscie-array.Plo  gscie-common.Plo  gscie.Plo
Gscie/gscie/.libs/: libgscie-1.0.la  libgscie-1.0.lai  libgscie-1.0.so.0  libgscie-1.0.so.0.0.0
